# skivvy

./: .gitignore  Makefile.am  README.md  autogen.sh  bootstrap.sh  configure-debug.sh  configure-release.sh  configure.ac  skivvy.conf.example
docs/: ctcp.txt  eggdrop-api.txt  skivvy-manual.text  todo.txt
pkg-config/: libskivvy.pc.in
skivvy/trunk/: Makefile.am  skivvy.conf.example
skivvy/trunk/docs/: todo.txt
skivvy/trunk/src/: Makefile.am  ios.cpp  irc.cpp  ircbot.cpp  logrep.cpp  network.cpp  plugin-chanops.cpp  plugin-example.cpp  plugin-rconics.cpp  plugin-trivial.cpp  rcon.cpp  server.cpp  skivlet.cpp  skivvy.cpp  test-net.cpp  test.cpp  types.cpp
skivvy/trunk/src/include/skivvy/: ircbot.h  logrep.h  network.h  plugin-example.h  plugin-rconics.h  plugin-rquotes.h  plugin-trivial.h  rpc.h  server.h  socketstream.h  stl.h  types.h
skivvy/trunk/src/include/skivvy/ai/: grammar.h
src/: .gitignore  FloodController.cpp  IrcBotMonitor.cpp  IrcServer.cpp  Makefile  Makefile.am  Makefile.local.example  RemoteIrcServer.cpp  Timers.cpp  botdb.cpp  cal.cpp  convert-cvars.cpp  ios.cpp  irc.cpp  ircbot.cpp  logrep.cpp  message.cpp  network.cpp  plugin-artibot.cpp  plugin-chanops.cpp  plugin-compile.cpp  plugin-diction.cpp  plugin-example.cpp  plugin-factoid.cpp  plugin-grabber.cpp  plugin-oastats.cpp  plugin-pfinder-oacom.cpp  plugin-pfinder.cpp  plugin-rconics.cpp  plugin-rquotes.cpp  plugin-rserver.cpp  plugin-trivial.cpp  props.cpp  quiz-rip.cpp  rcon.cpp  rpc.cpp  server.cpp  skivlet.cpp  skivvy-client-nc.cpp  skivvy-client.cpp  (+12 more)
src/include/skivvy/: .gitignore  FloodController.h  IrcBotMonitor.h  IrcServer.h  RemoteIrcServer.h  Timers.h  ansi.h  botdb.h  cal.h  ios.h  irc-constants.h  irc.h  ircbot.h  logrep.h  mail.h  message.h  network.h  openarena.h  plugin-artibot.h  plugin-chanops.h  plugin-compile.h  plugin-diction.h  plugin-example.h  plugin-factoid.h  plugin-grabber.h  plugin-oastats.h  plugin-pfinder-oacom.h  plugin-pfinder.h  plugin-rconics.h  plugin-rquotes.h  plugin-rserver.h  plugin-trivial.h  properties.h  props.h  rcon.h  rpc.h  server.h  socketstream.h  ssl_socketstream.h  stl.h  (+4 more)
src/include/skivvy/ai/: grammar.h
src/include/skivvy/bits/: rpc.tcc
test/: messages-fix.txt  messages.txt  test-host-01-fix.txt  test-host-01-in.txt
